# notes_social_network

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  file.txt  pyproject.toml
backend/: pyproject.toml
backend/src/: config.py  redis_client.py
backend/src/services/telegram/: auth.py
src/: config.py  main.py
src/api/routers/: access_router.py  notes_router.py  users_router.py
src/db/: __init__.py  collections.py  crud.py
src/entities/: user.py
src/exceptions/: exceptions.py  note_exceptions.py  user_exceptions.py
src/repositories/: __init__.py  factories.py  mongo_repository.py  notes.py  repository.py
src/schemas/: note.py  users.py
src/services/: __init__.py  notes.py  users.py
