[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Arteems <artm_frolov00@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
motor = "^3.6.0"
email-validator = "^2.2.0"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
