[project]
name = "notes-social-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "loguru>=0.7.3",
    "motor>=3.7.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "telegram-webapp-auth>=3.0.3",
    "uvicorn>=0.34.0",
]
